--- a/test/assets/css/style.css
+++ b/test/assets/css/style.css
@@ -1,33 +1,29 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .block1 {
-  /* background-image: url("/assets/img/image1.png"); */
-
-  background-image: url("img1.png");
-  background-color: brown;
-
   height: 821px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+
   width: 1773px;
-  padding-top: 80px;
 }
 
 .block1__title {
   margin: auto;
   margin-top: 200px;
   width: 372px;
-  height: 76px;
-
   padding: 10px;
 }
-h1,
-p {
+
+.block1__title h1 {
+  text-align: center;
+  color: white;
+  font-size: 48px;
+  font-weight: 800px;
+}
+.block1__title p {
   text-align: center;
   color: white;
   line-height: 10px;
@@ -48,10 +44,12 @@ p {
   text-align: center;
   font-weight: 400;
   line-height: 26px;
-
-  font-size: 14px;
+ font-size: 14px;
   border: 0;
   outline: none;
+  color: 
+#999999;
+  
 }
 
 .search-button {
@@ -60,7 +58,6 @@ p {
 
   background-color: #5474fd;
   position: absolute;
-
   color: #fff;
   width: 150px;
   height: 61px;
@@ -69,17 +66,22 @@ p {
 }
 
 .block2 {
-  background-color: blue;
-  width: 1770px;
+  background-color: #5474fd;
+  width: 1775px;
   height: 83px;
   color: white;
 }
-.menubar {
+.block2__logo{
+  font-size: 24px;
+  font-weight: 700;
+}
+.block2__menu {
   display: flex;
   justify-content: space-between;
   width: 1000px;
   margin: 0 auto;
   align-items: center;
+  margin-top: 5px;
 }
 .nav {
   list-style-type: none;
@@ -93,8 +95,6 @@ p {
 .block3 {
   width: 1773px;
   height: 685px;
-
-  
 }
 
 .button {
@@ -146,26 +146,26 @@ p {
 .block4 {
   width: 1773px;
   height: 340px;
-
-  background-color: #3333;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-around;
 }
 .block4__search {
-  width: 353px;
+  margin-top: 78px;
+  width: 215px;
   height: 163px;
   color: white;
   font-size: 36px;
 }
 
 .block4__select {
-  width: 200px;
+  margin-top: 78px;
+  width: 215px;
   height: 161px;
   color: white;
   font-size: 36px;
 }
 .block4__book {
+  margin-top: 78px;
   width: 215px;
   height: 174px;
   color: white;
@@ -175,28 +175,144 @@ p {
 .block5 {
   width: 1773px;
   height: 700px;
-
-  background-color: rgb(70, 69, 69);
 }
-.rectanglebox {
-  width: 543px;
-  height: 374px;
+.block5box1 {
+  width: 480px;
+  height: 311px;
   background-color: #000;
   color: #fff;
-  opacity: 0.5;
-  margin: 227px 899px 99px 328px;
+  opacity: 0.7;
+  margin-top: 229px;
+  margin-left: 330px;
+  padding: 30px;
 }
-.rectanglebox__button {
-  background-color: #5474fd;
+.block5box2 {
+  width: 480px;
+  height: 311px;
+  background-color: #000;
+  color: #fff;
+  opacity: 0.7;
+  margin-top: 229px;
+  margin-left: 900px;
+  padding: 30px;
+}
+
+.block5box__paragrah {
+  text-align: left;
+  line-height: 26px;
+  font-size: 16px;
+}
+
+.block5box__button {
+  width: 288px;
+  height: 63px;
+  color: white;
+  text-align: center;
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 400;
   border: none;
+  background-color: #5474fd;
+}
+.block6 {
+  width: 1773px;
+  height: 700px;
+}
+
+.block7 {
+  width: 1773px;
+  height: 731px;
+}
+
+.box7 {
+  height: 287px;
+  width: 1100px;
+
+  overflow: hidden;
+  margin: auto;
+}
+.block7__title {
+  margin-top: 128px;
+  margin-bottom: 90px;
   color: white;
 
+  font-size: 36px;
   text-align: center;
-  width: 228px;
-  height: 63px;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+}
+.box7 img {
+  margin-right: 15px;
+  float: left;
+}
+.box7 h1 {
+  color: white;
+  line-height: 28px;
+  font-size: 20px;
+  font-weight: 400;
+}
 
-  cursor: pointer;
+.box7 p {
+  margin-left: 15px;
+  display: block;
+  margin: 2px 0 0 0;
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+}
+
+.block8 {
+  width: 1773px;
+  height: 268px;
+}
+.block8__footer {
+  margin: auto;
+  width: 196px;
+  height: 51px;
+  color: white;
+  margin-top: 122px;
+}
+.block8__footer h1 {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.block8__footer p {
+  font-size: 16px;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3b5998;
+  color: white;
+}
+.fa-twitter {
+  background: #55acee;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.block8_icons {
+  width: 166px;
+  height: 16px;
+ 
+  margin: auto;
+  margin-top: 30px;
 }
